--- a/index.html
+++ b/index.html
@@ -265,59 +265,62 @@
 
     <!-- Portfolio-->
     <div id="experience">
-        <div class="container-fluid p-0">
+        <div class="container-fluid p-1">
             <div class="row no-gutters">
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
+                    <a class="portfolio-box"  href="assets/img/portfolio/work experience/Hyundai.jpg">
+                        <img class="img-fluid" style="max-height: 25rem; width: max-content;" src="assets/img/portfolio/work experience/Hyundai.jpg" alt="" />
                         <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-category text-white-50">Telemetry withs IoT</div>
+                            <div class="project-name">SMR Smart Hyundai</div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
+                    <a class="portfolio-box" href="assets/img/portfolio/work experience/Depro.jpg">
+                        <img class="img-fluid" style="max-height: 25rem; width: max-content;"  src="assets/img/portfolio/work experience/Depro.jpg" alt="" />
                         <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-category text-white-50">Simulation and Analysis of Electromagnetic Fields</div>
+                            <div class="project-name">DeproDriel</div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="assets/img/portfolio/work experience/COVIDA.jpg">
+                        <img class="img-fluid" style="max-height: 25rem; width: max-content;" src="assets/img/portfolio/work experience/COVIDA.jpg" alt="" />
+                        <div class="portfolio-box-caption">
+                            <div class="project-category text-white-50">Telemetry and Medical Assistance</div>
+                            <div class="project-name">Covida Ponte la verde Santander</div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="assets/img/portfolio/work experience/WEB.jpg">
+                        <img class="img-fluid" style="max-height: 16rem;width:max-content;" src="assets/img/portfolio/work experience/WEB.jpg" alt="" />
+                        <div class="portfolio-box-caption">
+                            <div class="project-category text-white-50">Web Development</div>
+                            <div class="project-name">Prokarma Intensive Tranning Program</div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
+                    <a class="portfolio-box" href="assets/img/portfolio/work experience/CAD.JPG">
+                        <img class="img-fluid" style="max-height: 16rem;width:max-content;" src="assets/img/portfolio/work experience/CAD.JPG" alt="" />
                         <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-category text-white-50">Computer Assisted Drawing</div>
+                            <div class="project-name">STAR SU FEDERAL MEXICO</div>
                         </div>
                     </a>
                 </div>
+
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="" />
-                        <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="" />
-                        <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
+                    <a class="portfolio-box" href="assets/img/portfolio/work experience/ENERGY.jpg">
+                        <img class="img-fluid" style="max-height: 16rem;width:max-content;" src="assets/img/portfolio/work experience/ENERGY.jpg" alt="" />
                         <div class="portfolio-box-caption p-3">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-category text-white-50">Entrepreneurship and Renewable Energies </div>
+                            <div class="project-name">Airmove ITESM</div>
                         </div>
                     </a>
                 </div>
@@ -354,10 +357,10 @@
                 <div class="col-lg-4 mr-auto text-center">
                     <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
                     <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                    <a class="d-block" href="mailto:contact@yourwebsite.com">
+                    <a class="d-block" href="mailto:camacho-jl@hotmail.com">
                         camacho-jl@hotmail.com    
                     </a>
-                    <a class="d-block" href="mailto:contact@yourwebsite.com">
+                    <a class="d-block" href="mailto:A01701655@itesm.mx">
                         A01701655@itesm.mx    
                     </a>
                 </div>
