--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/work experience/Depro.jpg">
-                        <img class="img-fluid" style="max-height: 25rem; width: max-content;"  src="assets/img/portfolio/work experience/Depro.jpg" alt="" />
+                    <a class="portfolio-box" href="assets/img/portfolio/work experience/Depro.JPG">
+                        <img class="img-fluid" style="max-height: 25rem; width: max-content;"  src="assets/img/portfolio/work experience/Depro.JPG" alt="" />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Simulation and Analysis of Electromagnetic Fields</div>
                             <div class="project-name">DeproDriel</div>
